<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ed_name"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:maxLength="10"
        android:inputType="number"
        android:id="@+id/ed_number"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- android:checked="true"  mac dinh se chon male-->
        <RadioButton
            android:checked="true"
            android:id="@+id/rdtn_male"
            android:text="@string/male"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbtn_female"
            android:text="@string/female"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </RadioGroup>
    <Button
        android:id="@+id/btn_add_contact"
        android:textColor="@color/colorWhite"
        android:padding="16dp"
        android:background="@color/colorPrimary"
        android:layout_margin="16dp"
        android:text="@string/add_contant"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lv_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>